--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-<header>
-    <div class="container"> 
-    <nav >
+<header class="header">
+    <div class="container header-container"> 
+    <nav class="header-navigation">
     <a href="./index.html" class="logo link" >Web<span>Studio</span> </a>
-    <ul class="list">
+    <ul class="list header-list">
         <li><a href="./index.html" class="link-list link" >Studio</a></li>
         <li><a href="./portfolio.html" class="link-list link" >Portfolio</a></li>
         <li><a href="" class="link-list link" >Contacts</a></li>
     </ul>
     </nav>
     <address class="address">
-        <ul class="list">
+        <ul class="list address-list-">
         <li><a class="address-item link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         <li><a class="address-item link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
@@ -38,7 +38,6 @@
             <button type="button" class="order">Order Service</button>
         </div>
         </section>
-
         <section>
         <div class="container">
             <h2 hidden class="work_type" >....</h2>
