--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </ul>
     </nav>
     <address class="address">
-        <ul class="address-list- list">
+        <ul class="address-list list">
         <li><a class="address-item link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         <li><a class="address-item link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
