--- a/index.html
+++ b/index.html
@@ -38,16 +38,16 @@
             <button type="button" class="order">Order Service</button>
         </div>
         </section>
-        <section>
+        <section class="work">
         <div class="container">
-            <h2 hidden class="work_type" >....</h2>
+            <h2 visually-hidden class="work_type" ></h2>
             <ul class="list">
                 <li><h3 class="strategy">Strategy</h3><p class="ourgoal"> Our goal is to identify the business problem to walk away with the perfect and creative solution.</p></li>
                 <li><h3 class="strategy">Punctuality</h3><p class="ourgoal">Bring the key message to the brand's audience for the best price within the shortest possible time.</p></li>
                 <li><h3 class="strategy">Diligence</h3><p class="ourgoal">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p></li>
                 <li><h3 class="strategy">Technologies</h3><p class="ourgoal">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p></li>
             </ul>
-            <h2>What are we doing</h2>
+            <h2 visually-hidden class="work_type"></h2>
         </div> >
         </section>
         <section>
