--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
         <div class="container">
             <h2 class="visually-hidden" ></h2>
             <ul class="list">
-                <li><h3 class="strategy">Strategy</h3><p class="ourgoal"> Our goal is to identify the business problem to walk away with the perfect and creative solution.</p></li>
-                <li><h3 class="strategy">Punctuality</h3><p class="ourgoal">Bring the key message to the brand's audience for the best price within the shortest possible time.</p></li>
-                <li><h3 class="strategy">Diligence</h3><p class="ourgoal">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p></li>
-                <li><h3 class="strategy">Technologies</h3><p class="ourgoal">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p></li>
+                <li><h3 class="strategy strategy-item">Strategy</h3><p class="ourgoal"> Our goal is to identify the business problem to walk away with the perfect and creative solution.</p></li>
+                <li><h3 class="strategy strategy-item">Punctuality</h3><p class="ourgoal">Bring the key message to the brand's audience for the best price within the shortest possible time.</p></li>
+                <li><h3 class="strategy strategy-item">Diligence</h3><p class="ourgoal">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p></li>
+                <li><h3 class="strategy strategy-item">Technologies</h3><p class="ourgoal">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p></li>
             </ul>
         </div> >
         </section>
