--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
             </ul>
         </div> >
         </section>
-        <section>
+        <section class="our-offers">
             <div class="container">
             <h2 class="whatwedo">What are we doing</h2>
             <ul class="list">
-            <li><img src="./images/pic1.jpg" alt="komp" width="360"></li>
-            <li><img src="./images/pic2.jpg" alt="phones" width="360"></li>
-            <li><img src="./images/pic3.jpg" alt="phone" width="360"></li>
+            <li><img src="./images/pic1.jpg" alt="komp" width="360" class="do-item"></li>
+            <li><img src="./images/pic2.jpg" alt="phones" width="360" class="do-item"></li>
+            <li><img src="./images/pic3.jpg" alt="phone" width="360" class="do-item"></li>
             </ul>
             </div>
         </section>
