--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </section>
         <section class="work">
         <div class="container">
-            <h2 visually-hidden class="visually-hidden" >/////</h2>
+            <h2 class="visually-hidden" >/////</h2>
             <ul class="list">
                 <li><h3 class="strategy strategy-item">Strategy</h3><p class="ourgoal"> Our goal is to identify the business problem to walk away with the perfect and creative solution.</p></li>
                 <li><h3 class="strategy strategy-item">Punctuality</h3><p class="ourgoal">Bring the key message to the brand's audience for the best price within the shortest possible time.</p></li>
