--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <nav class="header-navigation">
     <a href="./index.html" class="logo link" >Web<span>Studio</span> </a>
     <ul class="list header-list">
-        <li><a href="./index.html" class="link-list link" >Studio</a></li>
-        <li><a href="./portfolio.html" class="link-list link" >Portfolio</a></li>
-        <li><a href="" class="link-list link" >Contacts</a></li>
+        <li class="nav-item"><a href="./index.html" class="link-list link" >Studio</a></li>
+        <li class="nav-item"><a href="./portfolio.html" class="link-list link" >Portfolio</a></li>
+        <li class="nav-item"><a href="" class="link-list link" >Contacts</a></li>
     </ul>
     </nav>
     <address class="address">
