--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
             <div class="container">
             <h2 class="whatwedo">What are we doing</h2>
             <ul class="list">
-            <li><img src="./images/pic1.jpg" alt="komp" width="360" class="do-item"></li>
-            <li><img src="./images/pic2.jpg" alt="phones" width="360" class="do-item"></li>
-            <li><img src="./images/pic3.jpg" alt="phone" width="360" class="do-item"></li>
+            <li class="products"><img src="./images/pic1.jpg" alt="komp" width="360" class="do-item"></li>
+            <li class="products"><img src="./images/pic2.jpg" alt="phones" width="360" class="do-item"></li>
+            <li class="products"><img src="./images/pic3.jpg" alt="phone" width="360" class="do-item"></li>
             </ul>
             </div>
         </section>
