--- a/index.html
+++ b/index.html
@@ -64,13 +64,14 @@
             <h2 class="team_list">Our Team</h2>
             <ul class="list">
             <li class="mark"><img src="./images/pic4.jpg" alt="man" width="264">
-            <h3 class="strategy">Mark Guerrero</h3><p class="designer">Product Designer</p></li>
+             <div class="member">
+            <h3 class="strategy">Mark Guerrero</h3><p class="designer">Product Designer</p></div></li>
             <li class="mark"><img src="./images/pic5.jpg" alt="man2" width="264">
-            <h3 class="strategy">Tom Ford</h3><p class="designer">Frontend Developer</p></li>
+             <div class="member"><h3 class="strategy">Tom Ford</h3><p class="designer">Frontend Developer</p></div></li>
             <li class="mark"><img src="./images/pic6.jpg" alt="woman" width="264">
-            <h3 class="strategy">Camila Garcia</h3><p class="designer">Marketing</p></li>
+            <div class="member"><h3 class="strategy">Camila Garcia</h3><p class="designer">Marketing</p></div></li>
             <li class="mark"><img src="./images/pic7.jpg" alt="man3" width="264">
-            <h3 class="strategy">Daniel Wilson</h3><p class="designer">UI Designer</p></li>
+            <div class="member"><h3 class="strategy">Daniel Wilson</h3><p class="designer">UI Designer</p></div></li>
             </ul>
             </div>
         </section>
