--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
 </main>
     <footer class="footer">
     <div class="container">
-    <a href="./index.html" class="logo link">Web<span class="studio">Studio</span></a>
-    <p> Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p> 
+    <a href="./index.html" class="footer-logo link">Web<span class="studio">Studio</span></a>
+    <p class="footer=te"> Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p> 
     <div class="container"></div>
     </footer>
     
