--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <header class="header">
     <div class="container header-container"> 
     <nav class="header-navigation">
-    <a href="./index.html" class="logo link" >Web<span>Studio</span> </a>
+    <a href="./index.html" class="logo-up link" >Web<span>Studio</span> </a>
     <ul class="list header-list">
         <li class="nav-item"><a href="./index.html" class="link-list link" >Studio</a></li>
         <li class="nav-item"><a href="./portfolio.html" class="link-list link" >Portfolio</a></li>
@@ -24,8 +24,8 @@
     </nav>
     <address class="address">
         <ul class="address-list list">
-        <li><a class="address-item link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a class="address-item link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <li class="address-item" ><a class="address-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li class="address-item" ><a class="address-link link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
     </address>
     </div>
@@ -39,9 +39,9 @@
         </div>
         </section>
         <section class="work">
-        <div class="container">
+        <div class="container container-work">
             <h2 class="visually-hidden" >/////</h2>
-            <ul class="list">
+            <ul class="work-list list">
                 <li class="our-goals"><h3 class="strategy">Strategy</h3><p class="ourgoal"> Our goal is to identify the business problem to walk away with the perfect and creative solution.</p></li>
                 <li class="our-goals"><h3 class="strategy">Punctuality</h3><p class="ourgoal">Bring the key message to the brand's audience for the best price within the shortest possible time.</p></li>
                 <li class="our-goals"><h3 class="strategy">Diligence</h3><p class="ourgoal">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p></li>
@@ -52,7 +52,7 @@
         <section class="our-offers">
             <div class="container">
             <h2 class="whatwedo">What are we doing</h2>
-            <ul class="list">
+            <ul class="offers-list list">
             <li class="products"><img src="./images/pic1.jpg" alt="komp" width="360" class="do-item"></li>
             <li class="products"><img src="./images/pic2.jpg" alt="phones" width="360" class="do-item"></li>
             <li class="products"><img src="./images/pic3.jpg" alt="phone" width="360" class="do-item"></li>
@@ -60,24 +60,23 @@
             </div>
         </section>
         <section class="team">
-            <div class="container">
-            <h2 class="team_list">Our Team</h2>
-            <ul class="list">
+            <div class="team-container container">
+            <h2 class="whatwedo">Our Team</h2>
+            <ul class="team-list list">
             <li class="mark"><img src="./images/pic4.jpg" alt="man" width="264">
-             <div class="member">
-            <h3 class="strategy">Mark Guerrero</h3><p class="designer">Product Designer</p></div></li>
+             <div class="member"><h3 class="team-strategy">Mark Guerrero</h3><p class="designer">Product Designer</p></div></li>
             <li class="mark"><img src="./images/pic5.jpg" alt="man2" width="264">
-             <div class="member"><h3 class="strategy">Tom Ford</h3><p class="designer">Frontend Developer</p></div></li>
+             <div class="member"><h3 class="team-strategy">Tom Ford</h3><p class="designer">Frontend Developer</p></div></li>
             <li class="mark"><img src="./images/pic6.jpg" alt="woman" width="264">
-            <div class="member"><h3 class="strategy">Camila Garcia</h3><p class="designer">Marketing</p></div></li>
+            <div class="member"><h3 class="team-strategy">Camila Garcia</h3><p class="designer">Marketing</p></div></li>
             <li class="mark"><img src="./images/pic7.jpg" alt="man3" width="264">
-            <div class="member"><h3 class="strategy">Daniel Wilson</h3><p class="designer">UI Designer</p></div></li>
+            <div class="member"><h3 class="team-strategy">Daniel Wilson</h3><p class="designer">UI Designer</p></div></li>
             </ul>
             </div>
         </section>
 </main>
     <footer class="footer">
-    <div class="container">
+    <div class="footer-container container">
     <a href="./index.html" class="footer-logo link">Web<span class="studio">Studio</span></a>
     <p class="footer-text"> Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p> 
     <div class="container"></div>
