--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Webstudio</title>
+    <title>Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
@@ -12,94 +12,109 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-  <header>
-    <nav>
-     <a href="./index.html" class="logo link">Web<span class="web">Studio</span></a>
-     <ul class="list">
-        <li><a href="./index.html" class="link-list link" >Studio</a></li>
-        <li><a href="./portfolio.html" class="link-list link" >Portfolio</a></li>
-        <li><a href="" class="link-list link" >Contacts</a></li>
-     </ul>
+<header class="header">
+    <div class="container header-container"> 
+    <nav class="header-navigation">
+    <a href="./index.html" class="logo-up link" >Web<span>Studio</span> </a>
+    <ul class="list header-list">
+        <li class="nav-item"><a href="./index.html" class="link-list link" >Studio</a></li>
+        <li class="nav-item"><a href="./portfolio.html" class="link-list link" >Portfolio</a></li>
+        <li class="nav-item"><a href="" class="link-list link" >Contacts</a></li>
+    </ul>
     </nav>
     <address class="address">
-        <ul class="list">
-        <li><a class="address-item link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a class="address-item link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <ul class="address-list list">
+        <li class="address-item" ><a class="address-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li class="address-item" ><a class="address-link link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
     </address>
-    </header>
+    </div>
+</header>
     <main>
-    <section>
-    <h1 hidden>////</h1>
+    <section class="portfolio">
+    <div class="container gallery-container">
+        <h1 hidden>////</h1>
     <ul class="button-list list">
-    <li><button type="button" class="button-item">All</button></li>
-    <li><button type="button" class="button-item">Web Site</button></li>
-    <li><button type="button" class="button-item">App</button></li>
-    <li><button type="button" class="button-item">Design</button></li>
-    <li><button type="button" class="button-item">Marketing</button></li>
+    <li class="portfolio-item"><button type="button" class="button-item">All</button></li>
+    <li class="portfolio-item"><button type="button" class="button-item">Web Site</button></li>
+    <li class="portfolio-item"><button type="button" class="button-item">App</button></li>
+    <li class="portfolio-item"><button type="button" class="button-item">Design</button></li>
+    <li class="portfolio-item"><button type="button" class="button-item">Marketing</button></li>
     </ul>
-        <ul class="image list">
+        <ul class="image-list list">
             <li class="image-item">
                 <a class="image-link link" href="">
                 <img src="./images/img.jpg" alt="Interface">
+               <div class="container-item">
                 <h2 class="image-title">Banking App Interface Concept</h2>
-                <p class="image-text">App</p></a>
+                <p class="image-text">App</p></div></a>
             </li>
             <li class="image-item">
                 <a class="image-link link" href="">
                 <img src="./images/imgcashles.jpg" alt="Payment">
+                <div class="container-item">
                 <h2 class="image-title">Cashless Payment</h2>
-                <p class="image-text">Marketing</p></a>
+                <p class="image-text">Marketing</p></div></a>
             </li>
             <li class="image-item">
                 <a class="image-link link" href="">
                 <img src="./images/imgapp.jpg" alt="Meditation">
+                <div class="container-item">
                 <h2 class="image-title">Meditation App</h2>
-                <p class="image-text">App</p></a>
+                <p class="image-text">App</p></div></a>
             </li>
             <li class="image-item">
                 <a class="image-link link" href="">
                 <img src="./images/imgtaxi.jpg" alt="Taxi">
+                <div class="container-item">
                 <h2 class="image-title">Taxi Service</h2>
-                <p class="image-text">Marketing</p></a>
+                <p class="image-text">Marketing</p></div></a>
             </li>
             <li class="image-item">
                 <a class="image-link link" href="">
                 <img src="./images/imgscreen.jpg" alt="Phone">
+                <div class="container-item">
                 <h2 class="image-title">Screen Illustrations</h2>
-                <p class="image-text">Design</p></a>
+                <p class="image-text">Design</p></div></a>
             </li>
             <li class="image-item">
                 <a class="image-link link" href="">
                 <img src="./images/imgcourses.jpg" alt="Girl">
+                <div class="container-item">
                 <h2 class="image-title">Online Courses</h2>
-                <p class="image-text">Marketing</p></a>
+                <p class="image-text">Marketing</p></div></a>
             </li>
             <li class="image-item">
                 <a class="image-link link" href="">
                 <img src="./images/imgconcept.jpg" alt="Stories Concept">
+                <div class="container-item">
                     <h2 class="image-title">Instagram Stories Concept</h2>
-                    <p class="image-text">Design</p></a>
+                    <p class="image-text">Design</p></div></a>
             </li>
             <li class="image-item">
                 <a class="image-link link" href="">
                 <img src="./images/imgfood.jpg" alt="Food">
+                <div class="container-item">
                     <h2 class="image-title">Organic Food</h2>
-                    <p class="image-text">Web Site</p></a>
+                    <p class="image-text">Web Site</p></div></a>
             </li>
             <li class="image-item">
                 <a class="image-link link" href="">
                 <img src="./images/img/coffee.jpg" alt="Coffee">
+                <div class="container-item">
                     <h2 class="image-title">Fresh Coffee</h2>
-                    <p class="image-text">Web Site</p></a>
+                    <p class="image-text">Web Site</p></div></a>
             </li>
         </ul>
+    </div>
     </section>
     </main>
     <footer class="footer">
-    <a class="logo link" href="./index.html">Web<span class="studio">Studio</span></a>
-    <p> Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p> 
-    </footer>
+        <div class="footer-container container">
+        <a href="./index.html" class="footer-logo link">Web<span class="studio">Studio</span></a>
+        <p class="footer-text"> Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p> 
+        <div class="container"></div>
+        </footer>
     
 </body>
 </html> 
