--- a/portfolio.html
+++ b/portfolio.html
@@ -33,9 +33,9 @@
     <main>
     <section class="portfolio">
     <div class="container gallery-container">
-        <h1 hidden>////</h1>
+        <h1 class="visually-hidden">////</h1>
     <ul class="button-list list">
-    <li class="portfolio-item"><button type="button" class="button-item">All</button></li>
+    <li class="portflio-item"><button type="button" class="button-item">All</button></li>
     <li class="portfolio-item"><button type="button" class="button-item">Web Site</button></li>
     <li class="portfolio-item"><button type="button" class="button-item">App</button></li>
     <li class="portfolio-item"><button type="button" class="button-item">Design</button></li>
@@ -113,7 +113,7 @@
         <div class="footer-container container">
         <a href="./index.html" class="footer-logo link">Web<span class="studio">Studio</span></a>
         <p class="footer-text"> Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p> 
-        <div class="container"></div>
+       </div>
         </footer>
     
 </body>
