--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <div class="footer-container container">
     <a href="./index.html" class="footer-logo link">Web<span class="studio">Studio</span></a>
     <p class="footer-text"> Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p> 
-    <div class="container"></div>
+  </div>
     </footer>
     
 </body>
